fix: Knowledge have now the correct url
