# sera-back/app/Http/Controllers/KnowledgeController.php
@@ -28,7 +28,7 @@ class KnowledgeController extends Controller
     *                  @OA\Property(property="name", type="string", example="Knowledge 1"),
     *                  @OA\Property(property="infos", type="string", example="Infos about knowledge 1"),
     *                  @OA\Property(property="type", type="string", example="video"),
-    *                  @OA\Property(property="imageURL", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
+    *                  @OA\Property(property="image", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
     *                  @OA\Property(property="created_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *                  @OA\Property(property="updated_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *              )
@@ -46,7 +46,7 @@ class KnowledgeController extends Controller
     */
     public function index()
     {
-        $knowledges = Knowledge::get();
+        $knowledges = Knowledge::all();
 
         return response()->json($knowledges, 201);
     }
@@ -77,7 +77,7 @@ class KnowledgeController extends Controller
     *              @OA\Property(property="name", type="string", example="Knowledge 1"),
     *              @OA\Property(property="infos", type="string", example="Infos about knowledge 1"),
     *              @OA\Property(property="type", type="string", example="video"),
-    *              @OA\Property(property="imageURL", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
+    *              @OA\Property(property="image", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
     *              @OA\Property(property="created_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *              @OA\Property(property="updated_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *          )
@@ -124,7 +124,7 @@ class KnowledgeController extends Controller
                     'message' => 'Erreur lors de l\'upload du fichier'
                 ], 400);
             }
-            $knowledge->imageURL = $path;
+            $knowledge->image = $path;
         }
 
         $knowledge->save();
@@ -158,7 +158,7 @@ class KnowledgeController extends Controller
     *              @OA\Property(property="name", type="string", example="Knowledge 1"),
     *              @OA\Property(property="infos", type="string", example="Infos about knowledge 1"),
     *              @OA\Property(property="type", type="string", example="video"),
-    *              @OA\Property(property="imageURL", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
+    *              @OA\Property(property="image", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
     *              @OA\Property(property="created_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *              @OA\Property(property="updated_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *          )
@@ -224,7 +224,7 @@ class KnowledgeController extends Controller
     *              @OA\Property(property="name", type="string", example="Knowledge 1"),
     *              @OA\Property(property="infos", type="string", example="Infos about knowledge 1"),
     *              @OA\Property(property="type", type="string", example="video"),
-    *              @OA\Property(property="imageURL", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
+    *              @OA\Property(property="image", type="string", example="https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"),
     *              @OA\Property(property="created_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *              @OA\Property(property="updated_at", type="string", format="date-time", example="2021-05-20 08:55:00"),
     *          )
@@ -274,7 +274,7 @@ class KnowledgeController extends Controller
             $knowledge->type = $validated['type'];
         }
         if ($request->image != null) {
-            $previousPath = $knowledge->imageURL;
+            $previousPath = $knowledge->image;
             if ($previousPath != null){
                 Storage::disk('s3')->delete($previousPath);
             }
@@ -290,7 +290,7 @@ class KnowledgeController extends Controller
                     'message' => 'Erreur lors de l\'upload du fichier'
                 ], 400);
             }
-            $knowledge->imageURL = $path;
+            $knowledge->image = $path;
         }
 
         $knowledge->save();
@@ -345,8 +345,8 @@ class KnowledgeController extends Controller
         }
 
 
-        if ($knowledge->imageURL != null){
-            Storage::disk('s3')->delete($knowledge->imageURL);
+        if ($knowledge->image != null){
+            Storage::disk('s3')->delete($knowledge->image);
         }
 
         $knowledge->delete();
