# sera-back/storage/api-docs/api-docs.json
@@ -38,7 +38,7 @@
                                                 "type": "string",
                                                 "example": "video"
                                             },
-                                            "imageURL": {
+                                            "image": {
                                                 "type": "string",
                                                 "example": "https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"
                                             },
@@ -131,7 +131,7 @@
                                             "type": "string",
                                             "example": "video"
                                         },
-                                        "imageURL": {
+                                        "image": {
                                             "type": "string",
                                             "example": "https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"
                                         },
@@ -206,7 +206,7 @@
                                             "type": "string",
                                             "example": "video"
                                         },
-                                        "imageURL": {
+                                        "image": {
                                             "type": "string",
                                             "example": "https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"
                                         },
@@ -313,7 +313,7 @@
                                             "type": "string",
                                             "example": "video"
                                         },
-                                        "imageURL": {
+                                        "image": {
                                             "type": "string",
                                             "example": "https://sera-bucket.s3.eu-west-3.amazonaws.com/knowledges/1621538100.jpg"
                                         },
@@ -391,6 +391,278 @@
                     },
                     "403": {
                         "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/notifications": {
+            "get": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Get all notifications",
+                "operationId": "911565ad9aff9ba7eded3f189509e578",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer"
+                                            },
+                                            "title": {
+                                                "type": "string"
+                                            },
+                                            "description": {
+                                                "type": "string"
+                                            },
+                                            "is_read": {
+                                                "type": "boolean"
+                                            },
+                                            "is_deleted": {
+                                                "type": "boolean"
+                                            },
+                                            "user_id": {
+                                                "type": "integer"
+                                            },
+                                            "is_urgent": {
+                                                "type": "boolean"
+                                            },
+                                            "created_at": {
+                                                "type": "string"
+                                            },
+                                            "updated_at": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Update notification",
+                "operationId": "e6fc337d222121af177ca6de67a0bdac",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "integer"
+                                    },
+                                    "title": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "is_urgent": {
+                                        "type": "boolean"
+                                    },
+                                    "is_read": {
+                                        "type": "boolean"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        },
+                                        "title": {
+                                            "type": "string"
+                                        },
+                                        "description": {
+                                            "type": "string"
+                                        },
+                                        "is_read": {
+                                            "type": "boolean"
+                                        },
+                                        "is_deleted": {
+                                            "type": "boolean"
+                                        },
+                                        "user_id": {
+                                            "type": "integer"
+                                        },
+                                        "is_urgent": {
+                                            "type": "boolean"
+                                        },
+                                        "created_at": {
+                                            "type": "string"
+                                        },
+                                        "updated_at": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Notification not found"
+                    }
+                }
+            }
+        },
+        "/api/notifications/{id}": {
+            "get": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Get notification by id",
+                "operationId": "f2edf725f41dd6c9a9338a6a7b39d779",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Notification id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        },
+                                        "title": {
+                                            "type": "string"
+                                        },
+                                        "description": {
+                                            "type": "string"
+                                        },
+                                        "is_read": {
+                                            "type": "boolean"
+                                        },
+                                        "is_deleted": {
+                                            "type": "boolean"
+                                        },
+                                        "user_id": {
+                                            "type": "integer"
+                                        },
+                                        "is_urgent": {
+                                            "type": "boolean"
+                                        },
+                                        "created_at": {
+                                            "type": "string"
+                                        },
+                                        "updated_at": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Notification not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Delete notification by id",
+                "operationId": "54c4eb5ec5dc0d1e2916cec2fced1056",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Notification id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer"
+                                        },
+                                        "title": {
+                                            "type": "string"
+                                        },
+                                        "description": {
+                                            "type": "string"
+                                        },
+                                        "is_read": {
+                                            "type": "boolean"
+                                        },
+                                        "is_deleted": {
+                                            "type": "boolean"
+                                        },
+                                        "user_id": {
+                                            "type": "integer"
+                                        },
+                                        "is_urgent": {
+                                            "type": "boolean"
+                                        },
+                                        "created_at": {
+                                            "type": "string"
+                                        },
+                                        "updated_at": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Notification not found"
                     }
                 }
             }
@@ -4091,6 +4363,15 @@
                                 "srt",
                                 "vtt"
                             ]
+                        }
+                    },
+                    {
+                        "name": "final",
+                        "in": "query",
+                        "description": "Get only final transcriptions",
+                        "required": false,
+                        "schema": {
+                            "type": "boolean"
                         }
                     }
                 ],
